# automatics

./: .template.json  CHANGELOG.md  README.md  pixi.toml  pyproject.toml  tbump.toml
docs/source/: conf.py  index.md
scripts/: cookiecutter-update.sh  elements-data.py  init.sh
src/automatics/: __init__.py  calc.py  geom.py  ident.py  types.py  utils.py  view.py
src/automatics/element/: __init__.py  core.py  elements-data.json
src/automatics/models/: __init__.py  calc.py  geom.py  ident.py  mapper.py
src/automatics/rd/: __init__.py  mol.py
src/automatics/utils/: __init__.py  exceptions.py
tests/: test_automatics.py  test_calc.py  test_elem.py  test_geom.py  test_ident.py  test_mol.py  test_view.py
