[project]
name = "automatics"
version = "0.0.2"
authors = [
    {name = "Andreas V. Copan", email = "avcopan@uga.edu"},
    {name = "Troy N. Smith", email = "troy.smith@uga.edu"}
]
requires-python = ">= 3.12"
dependencies = [
    "numpy>=2.0",
    "pint>=0.24",
    "py3dmol>=2.5",
    "pydantic>=2.5",
    "rdkit>=2025",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build<0.12"]

# Ruff configurations
[tool.ruff]
exclude = [
    "docs",
    "**/*.ipynb",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Ty configurations
[tool.ty.environment]
python = ".pixi/envs/dev/bin/python"

[tool.ty.src]
include = [
    "src",
    "tests",
]

# Suppress unresolved imports for optional dependencies
[tool.ty.analysis]
allowed-unresolved-imports = ["qcdata"]

# Import-linter configurations
[tool.importlinter]
root_package = "automatics"

[[tool.importlinter.contracts]]
name = "Module Layering"
type = "layers"
layers = [
    "automatics.ident | automatics.view",
    "automatics.calc | automatics.geom",
    "automatics.rd",
    "automatics.element",
    "automatics.utils",
]

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = [
    "--doctest-modules",
    "--cov=automatics",
    "--cov-report=term-missing",
    "--cov-report=html",
]
doctest_optionflags = "NORMALIZE_WHITESPACE"

# Pytest-cov configurations
[tool.coverage.run]
branch = true
source = ["automatics"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80
